--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
 		
 
-		<!--Gallery start -->
+		<!--Gallery star-->
 		<section id="portfolio" class="portfolio">
 			<div class="portfolio-details">
 				<div class="section-heading text-center">
@@ -380,7 +380,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="sreerag/thar.PNG" alt="gallery image"/>
+										<img src="../sreerag/thar.png" alt="gallery image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Dream car
