--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="../sreerag/thar.png" alt="gallery image"/>
+										<img src="assets/sreerag/thar.png" alt="gallery image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Dream car
