--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="sreerag/ME.PNG" alt="profile_image">
+								<img src="assets/sreerag/ME.png" alt="profile_image">
 								<div class="about-list-icon">
 									<ul>
 										<li>
