--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 		<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 		
-        
+                <!--bootstrap.min.css-->
+				<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		
 		<!-- bootsnav -->
 		<link rel="stylesheet" href="assets/css/bootsnav.css" >	
